@@ -1,3 +1,7 @@
+2011-01-12  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/with.R: Use envir= argument to eval() 
+
 2011-01-11  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Release 0.2.2
